# drt-bridge-eth-sc

./: .gitignore  Cargo.toml  README.md  build-wasm.sh  clean-wasm.sh
bridged-tokens-wrapper/: .gitignore  Cargo.toml
bridged-tokens-wrapper/denali/: add_wrapped_token.scen.json  blacklist_token.scen.json  remove_wrapped_token.scen.json  setup.scen.json  unwrap_token.scen.json  whitelist_token.scen.json  wrap_token.scen.json
bridged-tokens-wrapper/meta/: Cargo.toml
bridged-tokens-wrapper/meta/src/: main.rs
bridged-tokens-wrapper/src/: dfp_big_uint.rs  lib.rs
bridged-tokens-wrapper/tests/: dfp_big_uint_test.rs  scenario_go_test.rs
bridged-tokens-wrapper/wasm/: Cargo.toml
bridged-tokens-wrapper/wasm/src/: lib.rs
dct-safe/: Cargo.toml
dct-safe/denali/: add_refund_batch.scen.json  create_another_tx_ok.scen.json  create_another_tx_too_late_for_batch.scen.json  create_transaction_ok.scen.json  create_transaction_over_max_amount.scen.json  distribute_fees.scen.json  execute_batch_both_rejected.scen.json  execute_batch_both_success.scen.json  execute_batch_one_success_one_rejected.scen.json  execute_transaction_rejected.scen.json  execute_transaction_success.scen.json  get_next_pending_tx.scen.json  get_next_tx_batch.scen.json  get_next_tx_batch_too_early.scen.json  setup_accounts.scen.json  zero_fees.scen.json
dct-safe/interaction/: snippets.sh
dct-safe/meta/: Cargo.toml
dct-safe/meta/src/: main.rs
dct-safe/src/: lib.rs
dct-safe/tests/: scenario_go_test.rs
dct-safe/wasm/: Cargo.toml
dct-safe/wasm/src/: lib.rs
docs/: gas_costs.md  relayer.md  setup.md
multi-transfer-dct/: Cargo.toml
multisig/: Cargo.toml  README.md
multisig/denali/: change_token_config.scen.json  create_dharitri_to_ethereum_tx_batch.scen.json  ethereum_to_dharitri_tx_batch_ok.scen.json  ethereum_to_dharitri_tx_batch_rejected.scen.json  execute_dharitri_to_ethereum_tx_batch.scen.json  get_empty_batch.scen.json  reject_dharitri_to_ethereum_tx_batch.scen.json  setup.scen.json  unstake.scen.json
multisig/interaction/: README.md  script.sh
multisig/interaction/config/: aggregator-snippets.sh  configs.cfg  helper.cfg  issue-tokens-snippets.sh  menu_functions.cfg  multisig-snippets.sh  multitransfer-snippets.sh  relayers-snippets.sh  safe-snippets.sh  upgrade-snippets.sh  wrapped-snippets.sh
multisig/meta/: Cargo.toml
multisig/src/: action.rs  lib.rs  multisig_general.rs  queries.rs  setup.rs  storage.rs  user_role.rs  util.rs
multisig/tests/: scenario_go_test.rs
multisig/wasm/: Cargo.toml
multisig/wasm/src/: lib.rs
price-aggregator/: price-aggregator.abi.json
(+38 files in other folders)
