[package]
name = "bridged-tokens-wrapper"
version = "0.0.0"
authors = ["Alin Cruceat <alin.cruceat@dharitri.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.transaction]
path = "../common/transaction"

[dependencies.dharitri-sc]
version = "0.13.4"

[dependencies.dharitri-sc-modules]
version = "0.13.4"

[dev-dependencies.dharitri-sc-scenario]
version = "0.13.4"
