[package]
name = "multisig-meta"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>, Dorin Iancu <dorin.iancu@dharitri.com>"]
edition = "2018"
publish = false

[dependencies.multisig]
path = ".."

[dependencies.dharitri-sc-meta]
version = "0.13.4"
default-features = false
